[package]
name = "vsekaiserver2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "commonlib"
path = "src/lib.rs"

[dependencies]
enet = "0.3.0"
anyhow = "1.0.66"
simple_tables = "0.3.0"
typed_id = "0.1.0"
bytemuck = "1.12.1"
bytemuck_derive = "1.2.1"
serde = {version = "1.0.147", features = ['derive']}
rmp = {version = "0.8.11", features = ['std']}
rmp-serde = {version = "1.1.1"}
uuid = { version = "1.2.1", features = ['fast-rng', 'v4', 'serde']}

[[bin]]
name = "server"
path = "src/bin/server/server_run.rs"

[[bin]]
name = "client"
path = "src/bin/client/client_run.rs"
